--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="google_android_map_api_key">AIzaSyCJJDbf6xVMrIheGvy2sgfZUaHL9vndhrY</string>
 </resources>
