Progress 2.3: Home Fix, Statistic Dump

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">EEncyclopediaOne</string>
+    <string name="app_name">Jakuy!</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">List</string>
